Refactor binance go ws options-streams
Signed-off-by: adshao <tjusgj@gmail.com>

--- a/src/binance/go/ws/options-streams/env.example
+++ b/src/binance/go/ws/options-streams/env.example
@@ -29,3 +29,18 @@ DEFAULT_INTERVAL=1m
 # Connection settings
 CONNECT_TIMEOUT=10s
 READ_TIMEOUT=30s
+
+# REST validation
+# Set to 1/true to enable REST-backed cross checks in tests
+# When disabled, tests skip REST comparisons to avoid network dependency
+ENABLE_REST_VALIDATION=
+
+# Event wait configuration (seconds)
+# Base time to wait for events before considering a graceful timeout
+EVENT_WAIT_SECS=20
+
+# Stream naming overrides (advanced)
+# If you plan to test New Symbol Info events, provide the correct stream name here.
+# Some docs may refer to the event type (OPTION_PAIR) rather than the actual stream path.
+# Leave empty to skip New Symbol Info tests.
+OPTION_PAIR_STREAM_NAME=
